tests/cases/structs/errors/struct-literal-duplicate-field.ari
struct Point {
  x: i64,
  y: i64,
}

fn main() -> i64 {
  let point = Point { x: 1, x: 2, y: 3 };
  return point.x;
}
